# test-cmake-library

./: GNUmakefile  Makefile  README.md
docker/: sdk.Dockerfile
src/: CMakeLists.txt  executor.cpp  executor.hpp
test/: CMakeLists.txt  main.cpp
